--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -14,31 +14,31 @@ jobs:
     - name: docker build, push
       shell: pwsh
       run: |
-        $branch="${{github.ref}}".Split("refs/heads/")
+        $branch="${{ github.ref }}".Split("refs/heads/")[1]
         Write-Host branch: $branch
 
-        $rev="${{github.sha}}".Substring(0,8)
+        $rev="${{ github.sha }}".Substring(0,8)
         Write-Host rev: $rev
 
-        docker login docker.pkg.github.com --username ${{github.actor}} --password ${{secrets.GITHUB_TOKEN}}
+        docker login docker.pkg.github.com --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
 
         docker build -t registrum_base -f Base.Dockerfile .
 
         $projects=@("api", "banner", "banner-data", "client")
         foreach($project in $projects) {
           Write-Host Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{github.repository}}/$($project):$rev .
-          docker tag docker.pkg.github.com/${{github.repository}}/$($project):$rev docker.pkg.github.com/${{github.repository}}/$($project):$branch
-          docker push docker.pkg.github.com/${{github.repository}}/$($project):$rev
-          docker push docker.pkg.github.com/${{github.repository}}/$($project):$branch
+          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$($project):$rev .
+          docker tag docker.pkg.github.com/${{ github.repository }}/$($project):$rev docker.pkg.github.com/${{ github.repository }}/$($project):$branch
+          docker push docker.pkg.github.com/${{ github.repository }}/$($project):$rev
+          docker push docker.pkg.github.com/${{ github.repository }}/$($project):$branch
         }
     - name: Trigger Hooks - master
       shell: pwsh
       if: github.ref == 'refs/heads/master'
       run: |
-        curl --request POST --data '{}' --header 'Content-Type: application/json' '${{ secrets.MASTER_HOOK }}'
+        Invoke-WebRequest -Method POST -Body @{} -Uri '${{ secrets.MASTER_HOOK }}'
     - name: Trigger Hooks - staging
       shell: pwsh
       if: github.ref == 'refs/heads/staging'
       run: |
-        curl --request POST --data '{}' --header 'Content-Type: application/json' '${{ secrets.STAGING_HOOK }}'
+        Invoke-WebRequest -Method POST -Body @{} -Uri '${{ secrets.STAGING_HOOK }}'
