--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -27,9 +27,7 @@ jobs:
         $projects=@("api", "banner", "banner-data", "client")
         foreach($project in $projects) {
           Write-Host Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$($project):$rev .
-          docker tag docker.pkg.github.com/${{ github.repository }}/$($project):$rev docker.pkg.github.com/${{ github.repository }}/$($project):$branch
-          docker push docker.pkg.github.com/${{ github.repository }}/$($project):$rev
+          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$($project):$branch .
           docker push docker.pkg.github.com/${{ github.repository }}/$($project):$branch
         }
     - name: Trigger Hooks - master
