--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -20,16 +20,17 @@ jobs:
         $rev="${{ github.sha }}".Substring(0,8)
         Write-Host rev: $rev
 
-        docker login docker.pkg.github.com --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
+        docker login ${{ secrets.REGISTRY_HOST }} --username ${{ secrets.REGISTRY_USER }} --password ${{ secrets.REGISTRY_PASSWORD }}
 
         docker build -t registrum_base -f Base.Dockerfile .
 
         $projects=@("api", "banner", "banner-data", "client")
         foreach($project in $projects) {
           Write-Host Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$($project):$branch .
-          docker push docker.pkg.github.com/${{ github.repository }}/$($project):$branch
+          docker build --target $project -t ${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/$($project):$branch .
+          docker push ${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/$($project):$branch
         }
+
     - name: Trigger Hooks - master
       shell: pwsh
       if: github.ref == 'refs/heads/master'
