--- a/.github/workflows/docker-cd-release.yml
+++ b/.github/workflows/docker-cd-release.yml
@@ -17,17 +17,17 @@ jobs:
         $tag="${{ github.ref }}".Split("refs/tags/")[1]
         Write-Host tag: $tag
 
-        docker login docker.pkg.github.com --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
+        docker login ${{ secrets.REGISTRY_HOST }} --username ${{ secrets.REGISTRY_USER }} --password ${{ secrets.REGISTRY_PASSWORD }}
 
         docker build -t registrum_base -f Base.Dockerfile .
 
         $projects=@("api", "banner", "banner-data", "client")
         foreach($project in $projects) {
           Write-Host Working on $project ...
-          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/$($project):$tag .
-          docker tag docker.pkg.github.com/${{ github.repository }}/$($project):$tag docker.pkg.github.com/${{ github.repository }}/$($project):latest
-          docker push docker.pkg.github.com/${{ github.repository }}/$($project):$tag
-          docker push docker.pkg.github.com/${{ github.repository }}/$($project):latest
+          docker build --target $project -t ${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/$($project):$tag .
+          docker tag ${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/$($project):$tag ${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/$($project):latest
+          docker push ${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/$($project):$tag
+          docker push ${{ secrets.REGISTRY_HOST }}/${{ github.repository }}/$($project):latest
         }
 
     - name: Trigger Hooks
