--- a/.github/workflows/docker-cd-branch.yml
+++ b/.github/workflows/docker-cd-branch.yml
@@ -11,6 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Update version.json
+      shell: pwsh
+      run: |
+        $VersionInfo=@{
+          rev="${{ github.sha }}".Substring(0,8)
+          sha="${{ github.sha }}"
+          branch="${{ github.ref }}".Split("refs/heads/")[1]
+          tag="${{ github.ref }}".Split("refs/tags/")[1]
+        }
+        $VersionInfo | ConvertTo-Json > ./client/src/version.json
     - name: docker build, push
       shell: pwsh
       run: |
