--- a/client/package.json
+++ b/client/package.json
@@ -22,15 +22,15 @@
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
-        "react-router-dom": "^5.1.2",
-        "react-select": "~3.1.0",
-        "react-toastify": "^5.5.0",
+        "react-router-dom": "^5.2.0",
+        "react-select": "^3.1.0",
+        "react-toastify": "^6.0.1",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "regenerator-runtime": "^0.13.5",
-        "morgan": "~1.10.0",
-        "@types/morgan": "~1.9.0",
+        "morgan": "^1.10.0",
+        "@types/morgan": "^1.9.0",
         "@chakra-ui/core": "^0.7.0",
         "@emotion/core": "^10.0.28",
         "@emotion/styled": "^10.0.27",
@@ -44,30 +44,30 @@
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
-        "@testing-library/jest-dom": "^5.5.0",
+        "@testing-library/jest-dom": "^5.7.0",
         "@testing-library/react": "^10.0.4",
-        "@testing-library/user-event": "^10.1.0",
+        "@testing-library/user-event": "^10.1.2",
         "@types/copy-webpack-plugin": "^5.0.0",
         "@types/html-webpack-plugin": "^3.2.2",
         "@types/jest": "^25.2.1",
-        "@types/node": "^13.13.4",
-        "@types/react": "^16.9.34",
-        "@types/react-dom": "^16.9.7",
-        "@types/react-redux": "^7.1.7",
+        "@types/node": "^13.13.5",
+        "@types/react": "^16.9.35",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.8",
         "@types/react-router-dom": "^5.1.5",
-        "@types/react-select": "~3.0.12",
-        "@types/testing-library__jest-dom": "^5.0.3",
+        "@types/react-select": "^3.0.12",
+        "@types/testing-library__jest-dom": "^5.0.4",
         "@types/testing-library__react": "^10.0.1",
         "@types/testing-library__user-event": "^4.1.1",
         "@types/webpack": "^4.41.12",
         "@types/webpack-dev-server": "^3.10.1",
-        "@typescript-eslint/eslint-plugin": "^2.30.0",
-        "@typescript-eslint/parser": "^2.30.0",
+        "@typescript-eslint/eslint-plugin": "^2.32.0",
+        "@typescript-eslint/parser": "^2.32.0",
         "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^5.1.1",
         "core-js": "^3.6.5",
         "css-loader": "^3.5.3",
-        "eslint": "^6.8.0",
+        "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-config-react": "^1.1.7",
         "eslint-plugin-import": "^2.20.2",
@@ -76,7 +76,7 @@
         "html-webpack-plugin": "^4.3.0",
         "http-server": "^0.12.3",
         "jest": "^25.5.4",
-        "node-sass": "^4.14.0",
+        "node-sass": "^4.14.1",
         "prop-types": "^15.7.2",
         "react-test-renderer": "^16.13.1",
         "redux-devtools-extension": "^2.13.8",
@@ -85,7 +85,7 @@
         "typescript": "^3.8.3",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3",
+        "webpack-dev-server": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme": "^3.11.0",
         "@types/enzyme": "^3.10.5",
