--- a/codecov.yml
+++ b/codecov.yml
@@ -11,6 +11,9 @@ coverage:
       banner-data:
         flags:
           - banner-data
+      common:
+        flags:
+          - common
 
 flags:
   api:
@@ -22,3 +25,6 @@ flags:
   banner-data:
     paths:
       - projects/banner-data/
+  common:
+    paths:
+      - projects/common/
