--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -46,7 +46,7 @@
         "@types/errorhandler": "^1.5.0",
         "@types/eslint": "^6.8.0",
         "@types/express": "^4.17.6",
-        "@types/express-flash": "0.0.2",
+        "@types/express-flash": "^0.0.2",
         "@types/express-session": "^1.17.0",
         "@types/jest": "^25.2.1",
         "@types/mongoose": "^5.7.16",
@@ -72,6 +72,7 @@
         "typescript": "^3.8.3",
         "@types/web-push": "~3.3.0",
         "@types/helmet": "^0.0.46",
-        "@types/mongodb": "^3.5.16"
+        "@types/mongodb": "^3.5.16",
+        "@types/dotenv": "^8.2.0"
     }
 }
