--- a/projects/api/tsconfig.json
+++ b/projects/api/tsconfig.json
@@ -1,22 +1,19 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es6",
-        "noImplicitAny": false,
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "dist",
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*"
-            ]
-        }
+      "module": "commonjs",
+      "allowSyntheticDefaultImports": true,
+      "target": "es2019",
+      "esModuleInterop": true,
+      "noImplicitAny": true,
+      "declaration": true,
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "lib": ["es2020"],
+      "outDir": "dist",
+      "baseUrl": ".",
+      "paths": {
+          "*": ["node_modules/*", "src/types/*"]
+      }
     },
-    "include": [
-        "src/**/*"
-    ]
-}
+    "include": ["src/**/*"]
+  }
