--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -13,6 +13,7 @@
     },
     "peerDependencies": {
         "axios": "^0.19.2",
+        "express": "^4.17.1",
         "axios-cookiejar-support": "^1.0.0",
         "tough-cookie": "^4.0.0",
         "mongoose": "^5.9.13"
@@ -22,6 +23,7 @@
         "@types/mongoose": "^5.7.16",
         "@typescript-eslint/eslint-plugin": "^2.32.0",
         "@typescript-eslint/parser": "^2.32.0",
+        "@types/express": "^4.17.6",
         "@types/tough-cookie": "^4.0.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
