--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -24,7 +24,6 @@
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
-        "errorhandler": "^1.5.1",
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-session": "^1.17.1",
@@ -36,14 +35,14 @@
         "tough-cookie": "^4.0.0",
         "web-push": "^3.4.4",
         "helmet": "^3.22.0",
-        "connect-mongo": "^3.2.0"
+        "connect-mongo": "^3.2.0",
+        "registrum-common": "^0.1.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/chai": "^4.2.11",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.6",
-        "@types/errorhandler": "^1.5.0",
         "@types/eslint": "^6.8.0",
         "@types/express": "^4.17.6",
         "@types/express-flash": "^0.0.2",
@@ -72,7 +71,6 @@
         "typescript": "^3.8.3",
         "@types/web-push": "~3.3.0",
         "@types/helmet": "^0.0.46",
-        "@types/mongodb": "^3.5.16",
-        "@types/dotenv": "^8.2.0"
+        "@types/mongodb": "^3.5.16"
     }
 }
