--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -13,6 +13,9 @@
     },
     "peerDependencies": {
         "axios": "^0.19.2",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "morgan": "^1.10.0",
         "express": "^4.17.1",
         "axios-cookiejar-support": "^1.0.0",
         "tough-cookie": "^4.0.0",
@@ -23,6 +26,9 @@
         "@types/mongoose": "^5.7.16",
         "@typescript-eslint/eslint-plugin": "^2.32.0",
         "@typescript-eslint/parser": "^2.32.0",
+        "@types/compression": "^1.7.0",
+        "@types/morgan": "^1.9.0",
+        "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
         "@types/tough-cookie": "^4.0.0",
         "eslint": "^7.0.0",
