--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -6,15 +6,12 @@
         "build": "tsc",
         "lint": "eslint \"src/**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
-        "start": "node dist/server.js",
+        "start": "node dist/index.js",
         "test": "jest --silent --runInBand --passWithNoTests",
         "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
         "watch:node": "nodemon --watch dist dist/index.js",
         "watch:test": "npm run test -- --watchAll",
         "watch:ts": "tsc -w --preserveWatchOutput"
-    },
-    "resolutions": {
-        "minimist": "^1.2.5"
     },
     "dependencies": {
         "@sendgrid/mail": "^7.1.0",
@@ -22,21 +19,21 @@
         "axios-cookiejar-support": "^1.0.0",
         "bcrypt": "^4.0.1",
         "compression": "^1.7.4",
+        "connect-mongo": "^3.2.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-session": "^1.17.1",
+        "helmet": "^3.22.0",
         "jest": "^25.5.4",
-        "mongoose": "^5.9.13",
+        "mongoose": "^5.9.14",
         "morgan": "^1.10.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "registrum-common": "^0.1.0",
         "tough-cookie": "^4.0.0",
-        "web-push": "^3.4.4",
-        "helmet": "^3.22.0",
-        "connect-mongo": "^3.2.0",
-        "registrum-common": "^0.1.0"
+        "web-push": "^3.4.4"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
@@ -47,6 +44,7 @@
         "@types/express": "^4.17.6",
         "@types/express-flash": "^0.0.2",
         "@types/express-session": "^1.17.0",
+        "@types/helmet": "^0.0.46",
         "@types/jest": "^25.2.1",
         "@types/mongoose": "^5.7.16",
         "@types/morgan": "^1.9.0",
@@ -55,6 +53,7 @@
         "@types/passport-local": "^1.0.33",
         "@types/supertest": "^2.0.9",
         "@types/tough-cookie": "^4.0.0",
+        "@types/web-push": "~3.3.0",
         "@typescript-eslint/eslint-plugin": "^2.32.0",
         "@typescript-eslint/parser": "^2.32.0",
         "chai": "^4.2.0",
@@ -62,17 +61,13 @@
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
+        "mongodb-memory-server": "^6.6.0",
         "nodemon": "^2.0.3",
         "prettier": "^2.0.5",
         "supertest": "^4.0.2",
         "ts-jest": "^25.5.1",
         "ts-node": "^8.10.1",
         "tslib": "^1.11.2",
-        "typescript": "^3.8.3",
-        "@types/web-push": "~3.3.0",
-        "@types/helmet": "^0.0.46",
-        "@types/mongodb": "^3.5.16",
-        "mongodb-memory-server": "^6.6.0",
-        "mongodb-memory-server-core": "^6.6.0"
+        "typescript": "^3.8.3"
     }
 }
