--- a/projects/api/tsconfig.json
+++ b/projects/api/tsconfig.json
@@ -10,10 +10,7 @@
       "declaration": true,
       "lib": ["es2020"],
       "outDir": "dist",
-      "baseUrl": ".",
-      "paths": {
-          "*": ["node_modules/*", "src/types/*"]
-      }
+      "baseUrl": "src",
     },
     "include": ["src/**/*"]
   }
