--- a/projects/banner/package.json
+++ b/projects/banner/package.json
@@ -14,28 +14,30 @@
         "watch:ts": "tsc -w --preserveWatchOutput"
     },
     "dependencies": {
+        "@bmiddha/webhooks": "^1.1.6",
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "mongoose": "^5.9.13",
+        "mongoose": "^5.9.14",
         "morgan": "^1.10.0",
-        "tough-cookie": "^4.0.0",
         "node-fetch": "^2.6.0",
-        "@bmiddha/webhooks": "^1.1.3",
-        "registrum-common": "^0.1.0"
+        "registrum-common": "^0.1.0",
+        "tough-cookie": "^4.0.0"
     },
     "devDependencies": {
         "@types/chai": "^4.2.11",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
+        "@types/ioredis": "^4.16.2",
         "@types/jest": "^25.2.1",
         "@types/mongoose": "^5.7.16",
         "@types/morgan": "^1.9.0",
         "@types/node": "^13.13.5",
+        "@types/node-fetch": "^2.5.7",
         "@types/tough-cookie": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^2.32.0",
         "@typescript-eslint/parser": "^2.32.0",
@@ -44,14 +46,12 @@
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
+        "ioredis": "^4.17.1",
         "jest": "^25.5.4",
         "nodemon": "^2.0.3",
         "prettier": "^2.0.5",
         "ts-jest": "^25.5.1",
         "ts-node": "^8.10.1",
-        "typescript": "^3.8.3",
-        "@types/node-fetch": "^2.5.7",
-        "ioredis": "^4.17.1",
-        "@types/ioredis": "^4.16.2"
+        "typescript": "^3.8.3"
     }
 }
