--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -12,11 +12,17 @@
         "watch": "webpack-dev-server --mode=development"
     },
     "dependencies": {
+        "@chakra-ui/core": "^0.7.0",
+        "@emotion/core": "^10.0.28",
+        "@emotion/styled": "^10.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
+        "@types/morgan": "^1.9.0",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
+        "emotion-theming": "^10.0.27",
+        "morgan": "^1.10.0",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^1.0.1",
@@ -28,13 +34,7 @@
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "regenerator-runtime": "^0.13.5",
-        "morgan": "^1.10.0",
-        "@types/morgan": "^1.9.0",
-        "@chakra-ui/core": "^0.7.0",
-        "@emotion/core": "^10.0.28",
-        "@emotion/styled": "^10.0.27",
-        "emotion-theming": "^10.0.27"
+        "regenerator-runtime": "^0.13.5"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -48,6 +48,8 @@
         "@testing-library/react": "^10.0.4",
         "@testing-library/user-event": "^10.1.2",
         "@types/copy-webpack-plugin": "^5.0.0",
+        "@types/enzyme": "^3.10.5",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/html-webpack-plugin": "^3.2.2",
         "@types/jest": "^25.2.1",
         "@types/node": "^13.13.5",
@@ -67,6 +69,8 @@
         "copy-webpack-plugin": "^5.1.1",
         "core-js": "^3.6.5",
         "css-loader": "^3.5.3",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-config-react": "^1.1.7",
@@ -85,10 +89,6 @@
         "typescript": "^3.8.3",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
-        "enzyme": "^3.11.0",
-        "@types/enzyme": "^3.10.5",
-        "@types/enzyme-adapter-react-16": "^1.0.6"
+        "webpack-dev-server": "^3.11.0"
     }
 }
