--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -11,38 +11,32 @@
         "test": "jest --silent --passWithNoTests",
         "watch": "tsc -w --preserveWatchOutput"
     },
-    "peerDependencies": {
-        "axios": "^0.19.2",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "morgan": "^1.10.0",
-        "express": "^4.17.1",
-        "axios-cookiejar-support": "^1.0.0",
-        "tough-cookie": "^4.0.0",
-        "mongoose": "^5.9.13"
-    },
     "devDependencies": {
-        "@types/node": "^13.13.5",
+        "@types/chai": "^4.2.11",
+        "@types/express": "^4.17.6",
+        "@types/jest": "^25.2.1",
         "@types/mongoose": "^5.7.16",
+        "@types/node": "^13.13.5",
+        "@types/tough-cookie": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^2.32.0",
         "@typescript-eslint/parser": "^2.32.0",
-        "@types/compression": "^1.7.0",
-        "@types/morgan": "^1.9.0",
-        "@types/cors": "^2.8.6",
-        "@types/express": "^4.17.6",
-        "@types/tough-cookie": "^4.0.0",
+        "chai": "^4.2.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
+        "jest": "^25.5.4",
         "nodemon": "^2.0.3",
         "prettier": "^2.0.5",
-        "ts-jest": "^26.0.0",
+        "ts-jest": "^25.5.1",
         "ts-node": "^8.10.1",
         "tslib": "^1.11.2",
-        "typescript": "^3.8.3",
-        "jest": "^26.0.1",
-        "@types/jest": "^25.2.2",
-        "chai": "^4.2.0",
-        "@types/chai": "^4.2.11"
+        "typescript": "^3.8.3"
+    },
+    "peerDependencies": {
+        "axios": "^0.19.2",
+        "axios-cookiejar-support": "^1.0.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.9.14",
+        "tough-cookie": "^4.0.0"
     }
 }
