--- a/projects/banner-data/package.json
+++ b/projects/banner-data/package.json
@@ -44,6 +44,7 @@
         "ts-jest": "^26.0.0",
         "ts-node": "^8.10.1",
         "tslib": "^2.0.0",
-        "typescript": "^3.9.2"
+        "typescript": "^3.9.2",
+        "codecov": "^3.7.0"
     }
 }
