--- a/projects/banner/package.json
+++ b/projects/banner/package.json
@@ -52,6 +52,7 @@
         "prettier": "^2.0.5",
         "ts-jest": "^26.0.0",
         "ts-node": "^8.10.1",
-        "typescript": "^3.9.2"
+        "typescript": "^3.9.2",
+        "codecov": "^3.7.0"
     }
 }
