--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -89,6 +89,7 @@
         "typescript": "^3.9.2",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "codecov": "^3.7.0"
     }
 }
