--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -30,7 +30,8 @@
         "ts-jest": "^26.0.0",
         "ts-node": "^8.10.1",
         "tslib": "^2.0.0",
-        "typescript": "^3.9.2"
+        "typescript": "^3.9.2",
+        "codecov": "^3.7.0"
     },
     "peerDependencies": {
         "axios": "^0.19.2",
