--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -7,7 +7,7 @@
         "lint": "eslint \"src/**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
         "start": "node dist/index.js",
-        "test": "jest --silent --runInBand --passWithNoTests",
+        "test": "jest --silent --passWithNoTests",
         "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
         "watch:node": "nodemon --watch dist dist/index.js",
         "watch:test": "npm run test -- --watchAll",
