--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,11 +12,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - name: Get npm cache directory
-        id: npm-cache
+      - name: Get pnpm cache directory
+        id: pnpm-cache
         shell: pwsh
         run: |
-          echo "::set-output name=dir::$(npm config get cache)"
+          echo "::set-output name=dir::common/temp/pnpm-store"
       - uses: actions/cache@v1
         with:
           path: common/temp/pnpm-store
