--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -33,7 +33,7 @@
         "typescript": "^3.9.2",
         "codecov": "^3.7.0"
     },
-    "peerDependencies": {
+    "dependencies": {
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
         "express": "^4.17.1",
