--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -34,7 +34,8 @@
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "regenerator-runtime": "^0.13.5"
+        "regenerator-runtime": "^0.13.5",
+        "dotenv-webpack": "^1.8.0"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -48,6 +49,7 @@
         "@testing-library/react": "^10.0.4",
         "@testing-library/user-event": "^10.3.1",
         "@types/copy-webpack-plugin": "^5.0.1",
+        "@types/dotenv-webpack": "^1.7.0",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/html-webpack-plugin": "^3.2.3",
