--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -34,8 +34,7 @@
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "regenerator-runtime": "^0.13.5",
-        "dotenv-webpack": "^1.8.0"
+        "regenerator-runtime": "^0.13.5"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -49,7 +48,6 @@
         "@testing-library/react": "^10.0.4",
         "@testing-library/user-event": "^10.3.1",
         "@types/copy-webpack-plugin": "^5.0.1",
-        "@types/dotenv-webpack": "^1.7.0",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/html-webpack-plugin": "^3.2.3",
@@ -92,6 +90,7 @@
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0",
-        "codecov": "^3.7.0"
+        "codecov": "^3.7.0",
+        "dotenv": "^8.2.0"
     }
 }
