--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -90,6 +90,7 @@
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0",
-        "codecov": "^3.7.0"
+        "codecov": "^3.7.0",
+        "dotenv": "^8.2.0"
     }
 }
