--- a/.github/workflows/docker-cd-release.yml
+++ b/.github/workflows/docker-cd-release.yml
@@ -29,7 +29,7 @@ jobs:
 
         docker login ${{ secrets.REGISTRY_HOST }} --username ${{ secrets.REGISTRY_USER }} --password ${{ secrets.REGISTRY_PASSWORD }}
 
-        docker build -t registrum_base -f Base.Dockerfile .
+        docker build -e WEBPUSHPUBLIC=${{ secrets.WEBPUSHPUBLIC }} -t registrum_base -f Base.Dockerfile .
 
         $projects=@("api", "banner", "banner-data", "client")
         foreach($project in $projects) {
