--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -43,22 +43,23 @@
         "@types/express": "^4.17.6",
         "@types/express-session": "^1.17.0",
         "@types/helmet": "^0.0.47",
-        "@types/jest": "^25.2.3",
+        "@types/jest": "^26.0.3",
         "@types/mongoose": "^5.7.21",
         "@types/morgan": "^1.9.0",
-        "@types/node": "^14.0.3",
+        "@types/node": "^14.0.14",
         "@types/passport": "^1.0.3",
         "@types/passport-local": "^1.0.33",
         "@types/supertest": "^2.0.9",
         "@types/tough-cookie": "^4.0.0",
         "@types/web-push": "~3.3.0",
-        "@typescript-eslint/eslint-plugin": "^2.34.0",
-        "@typescript-eslint/parser": "^2.34.0",
+        "@typescript-eslint/eslint-plugin": "^3.5.0",
+        "@typescript-eslint/parser": "^3.5.0",
         "chai": "^4.2.0",
+        "codecov": "^3.7.0",
         "concurrently": "^5.2.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-prettier": "^3.1.4",
         "mongodb-memory-server": "^6.6.0",
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
@@ -66,7 +67,6 @@
         "ts-jest": "^26.0.0",
         "ts-node": "^8.10.1",
         "tslib": "^2.0.0",
-        "typescript": "^3.9.2",
-        "codecov": "^3.7.0"
+        "typescript": "^3.9.6"
     }
 }
