--- a/projects/banner-data/package.json
+++ b/projects/banner-data/package.json
@@ -26,25 +26,25 @@
     "devDependencies": {
         "@types/argparse": "^1.0.38",
         "@types/chai": "^4.2.11",
-        "@types/jest": "^25.2.3",
+        "@types/jest": "^26.0.3",
         "@types/mongoose": "^5.7.21",
-        "@types/node": "^14.0.3",
+        "@types/node": "^14.0.14",
         "@types/node-cron": "^2.0.3",
         "@types/tough-cookie": "^4.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.34.0",
-        "@typescript-eslint/parser": "^2.34.0",
+        "@typescript-eslint/eslint-plugin": "^3.5.0",
+        "@typescript-eslint/parser": "^3.5.0",
         "chai": "^4.2.0",
+        "codecov": "^3.7.0",
         "concurrently": "^5.2.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-prettier": "^3.1.4",
         "jest": "^26.0.1",
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
         "ts-jest": "^26.0.0",
         "ts-node": "^8.10.1",
         "tslib": "^2.0.0",
-        "typescript": "^3.9.2",
-        "codecov": "^3.7.0"
+        "typescript": "^3.9.6"
     }
 }
