--- a/projects/banner/package.json
+++ b/projects/banner/package.json
@@ -33,26 +33,26 @@
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
         "@types/ioredis": "^4.16.2",
-        "@types/jest": "^25.2.3",
+        "@types/jest": "^26.0.3",
         "@types/mongoose": "^5.7.21",
         "@types/morgan": "^1.9.0",
-        "@types/node": "^14.0.3",
+        "@types/node": "^14.0.14",
         "@types/node-fetch": "^2.5.7",
         "@types/tough-cookie": "^4.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.34.0",
-        "@typescript-eslint/parser": "^2.34.0",
+        "@typescript-eslint/eslint-plugin": "^3.5.0",
+        "@typescript-eslint/parser": "^3.5.0",
         "chai": "^4.2.0",
+        "codecov": "^3.7.0",
         "concurrently": "^5.2.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-prettier": "^3.1.4",
         "ioredis": "^4.17.1",
         "jest": "^26.0.1",
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
         "ts-jest": "^26.0.0",
         "ts-node": "^8.10.1",
-        "typescript": "^3.9.2",
-        "codecov": "^3.7.0"
+        "typescript": "^3.9.6"
     }
 }
