--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -2,54 +2,52 @@
   "name": "registrum-client",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "npx webpack --mode development",
+    "lint": "eslint \"src/**/*.{js,ts}\"",
+    "lint:fix": "npm run lint -- --fix",
+    "test": "echo 'No Tests' && exit 0",
+    "watch": "npx webpack-dev-server --mode development"
+  },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@fluentui/react": "^7.117.3",
+    "@fluentui/react": "^7.121.9",
     "@reduxjs/toolkit": "^1.4.0",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.3",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@uifabric/azure-themes": "^7.1.22",
-    "@uifabric/fluent-theme": "^7.1.91",
     "@uifabric/react-cards": "^0.109.109",
-    "@uifabric/react-hooks": "^7.4.5",
+    "@uifabric/react-hooks": "^7.4.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "typescript": "^3.9.2"
-  },
-  "scripts": {
-    "lint": "eslint \"src/**/*.{js,ts}\"",
-    "lint:fix": "npm run lint -- --fix",
-    "watch": "npx webpack-dev-server --mode development",
-    "build": "npx webpack --mode development",
-    "test": "echo 'No Tests' && exit 0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
-    "@babel/preset-typescript": "^7.10.1",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@types/webpack-env": "^1.15.2",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.3",
+    "css-loader": "^3.6.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.0.0",
     "prettier": "^2.0.5",
     "react-hot-loader": "^4.12.21",
     "react-svg-loader": "^3.0.3",
     "style-loader": "^1.2.1",
     "svg-inline-loader": "^0.8.2",
+    "typescript": "^3.9.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/webpack-env": "^1.15.2"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
