--- a/projects/common/package.json
+++ b/projects/common/package.json
@@ -11,33 +11,33 @@
         "test": "jest --silent --passWithNoTests",
         "watch": "tsc -w --preserveWatchOutput"
     },
-    "devDependencies": {
-        "@types/chai": "^4.2.11",
-        "@types/express": "^4.17.6",
-        "@types/jest": "^25.2.3",
-        "@types/mongoose": "^5.7.21",
-        "@types/node": "^14.0.3",
-        "@types/tough-cookie": "^4.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.34.0",
-        "@typescript-eslint/parser": "^2.34.0",
-        "chai": "^4.2.0",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "jest": "^26.0.1",
-        "nodemon": "^2.0.4",
-        "prettier": "^2.0.5",
-        "ts-jest": "^26.0.0",
-        "ts-node": "^8.10.1",
-        "tslib": "^2.0.0",
-        "typescript": "^3.9.2",
-        "codecov": "^3.7.0"
-    },
     "dependencies": {
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
         "express": "^4.17.1",
         "mongoose": "^5.9.15",
         "tough-cookie": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.2.11",
+        "@types/express": "^4.17.6",
+        "@types/jest": "^26.0.3",
+        "@types/mongoose": "^5.7.21",
+        "@types/node": "^14.0.14",
+        "@types/tough-cookie": "^4.0.0",
+        "@typescript-eslint/eslint-plugin": "^3.5.0",
+        "@typescript-eslint/parser": "^3.5.0",
+        "chai": "^4.2.0",
+        "codecov": "^3.7.0",
+        "eslint": "^7.0.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "jest": "^26.0.1",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.0.5",
+        "ts-jest": "^26.0.0",
+        "ts-node": "^8.10.1",
+        "tslib": "^2.0.0",
+        "typescript": "^3.9.6"
     }
 }
