--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -18,7 +18,11 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "axios": "^0.19.2",
+    "registrum-common": "^0.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
@@ -51,6 +55,7 @@
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@types/axios": "^0.14.0"
   }
 }
