--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -37,10 +37,12 @@
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "prettier": "^2.0.5",
     "react-hot-loader": "^4.12.21",
     "react-svg-loader": "^3.0.3",
